--- a/index.html
+++ b/index.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+
+  <body>
     <header>
-        <img class="button1" src="image1.jpg" alt=""></title>
+      <nav class="talented">
+        <a href="index.html"><img class="button1" src="image1.svg" alt="" /></a>
+        <ul class="genius">
+          <li><a href="">Accueil</a></li>
+          <li><a href="">Mes projets</a></li>
+          <li><a href="">À Propos de moi</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+      </nav>
     </header>
-    
-</body>
+    <section class="learner">
+      <h1>Hello!</h1>
+      <p>Moi c'est Ayoub,</p>
+      <p>et je cherche </p>
+      <img
+        class="ahruahruahru"
+        src="hakhak.jpeg"
+        width="200px"
+        height="400"
+      />
+    </section>
+  </body>
 </html>
