--- a/index.html
+++ b/index.html
@@ -20,15 +20,58 @@
       </nav>
     </header>
     <section class="learner">
-      <h1>Hello!</h1>
-      <p>Moi c'est Ayoub,</p>
-      <p>et je cherche </p>
-      <img
-        class="ahruahruahru"
-        src="hakhak.jpeg"
-        width="200px"
-        height="400"
-      />
+      <div class="drunk">
+        <h1>Hello!</h1>
+        <p>Moi c'est Ayoub,</p>
+        <p>et je cherche</p>
+        <a class="task" href="#footer">contactez moi</a>
+      </div>
+      <div class="sober">
+        <img
+          class="ahruahruahru"
+          src="hakhak.jpeg"
+          width="200px"
+          height="400"
+        />
+      </div>
+    </section>
+    <section class="elementparent">
+      <div class="card">
+        <img src="imagenumba1.jpg" alt="yap" />
+        <div class="contenue">
+          <h2>yapyap</h2>
+          <p>
+            yapyapyap
+          </p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="imagenumba2.jpg" alt="yap" />
+        <div class="contenue">
+          <h2>yapyap</h2>
+          <p>
+            yapyapyap
+          </p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="imagenumba3.jpg" alt="yap" />
+        <div class="contenue">
+          <h2>yapyap</h2>
+          <p>
+            yapyapyap
+          </p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="imagenumba4.jpg" alt="yap" />
+        <div class="contenue">
+          <h2>yapyap</h2>
+          <p>
+            yapyapyap
+          </p>
+        </div>
+      
     </section>
   </body>
 </html>
