--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <section class="learner">
       <div class="drunk">
         <h1>Hello!</h1>
-        <p>Moi c'est Ayoub,</p>
-        <p>et je cherche</p>
+        <h2>Moi c'est Ayoub,
+        et je cherche</h2>
         <a class="task" href="#footer">contactez moi</a>
       </div>
       <div class="sober">
@@ -35,11 +35,12 @@
         />
       </div>
     </section>
+    <h4>Mes projets</h4>
     <section class="elementparent">
       <div class="card">
         <img src="imagenumba1.jpg" alt="yap" />
         <div class="contenue">
-          <h2>yapyap</h2>
+          <h3>yapyap</h3>
           <p>
             yapyapyap
           </p>
@@ -48,7 +49,7 @@
       <div class="card">
         <img src="imagenumba2.jpg" alt="yap" />
         <div class="contenue">
-          <h2>yapyap</h2>
+          <h3>yapyap</h3>
           <p>
             yapyapyap
           </p>
@@ -57,7 +58,7 @@
       <div class="card">
         <img src="imagenumba3.jpg" alt="yap" />
         <div class="contenue">
-          <h2>yapyap</h2>
+          <h3>yapyap</h3>
           <p>
             yapyapyap
           </p>
@@ -66,7 +67,7 @@
       <div class="card">
         <img src="imagenumba4.jpg" alt="yap" />
         <div class="contenue">
-          <h2>yapyap</h2>
+          <h3>yapyap</h3>
           <p>
             yapyapyap
           </p>
